# 42_printf

./: 2  CMakeLists.txt  Makefile  README.md  a.out  author  main.c  printf.c  printf.h  updates.xml
_mac/: cpp.toolchains.xml
includes/: libftprintf.h  libftprintf.h.gch
libft/: Makefile
libft/includes/: libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_countletter.c  ft_countwords.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_matrixalloc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_num_size.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+27 more)
src/: form_num_char.c  ft_charlen.c  ft_color_input.c  ft_exp.c  ft_itoa_double.c  ft_itoa_prntf.c  ft_max_number.c  ft_parcer_printf.c  ft_printbits_printf.c  ft_printf_fd.c  ft_putchar_u.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putstr_u.c  ft_round_double.c  ft_strdup_u.c  ft_strlen_u.c  ft_strmap.c  ft_strndup_u.c  ft_strnum_base.c  printf.c
