cmake_minimum_required(VERSION 3.12)
project(42_printf C)

set(CMAKE_C_STANDARD 99)

add_executable(printf
        libft/src/ft_atoi.c
        libft/src/ft_bzero.c
        libft/src/ft_countletter.c
        libft/src/ft_countwords.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_isspace.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_matrixalloc.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_putchar.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putendl.c
        src/ft_putnbr_fd.c
        libft/src/ft_putnbr.c
        src/ft_putstr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_swap.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        src/ft_max_number.c
        libft/src/get_next_line.c
        src/printf.c
        src/ft_itoa_prntf.c
        src/ft_strnum_base.c
        libft/src/ft_strndup.c
        src/ft_itoa_double.c
        src/ft_strndup_u.c
        main.c
        src/ft_exp.c
        src/ft_round_double.c
        src/ft_putchar_u.c
        src/ft_putstr_u.c
        src/ft_strlen_u.c
        src/ft_strdup_u.c
        src/ft_charlen.c
        src/ft_parcer_printf.c
        src/form_num_char.c src/ft_printbits_printf.c src/ft_color_input.c libft/src/ft_num_size.c)

